--- a/Aoc2015.cabal
+++ b/Aoc2015.cabal
@@ -31,6 +31,7 @@ library
     -- other-modules:
     -- other-extensions:
     build-depends:    base,
+                      trifecta
     hs-source-dirs:   src
     default-language: GHC2021
 
