--- a/Aoc2015.cabal
+++ b/Aoc2015.cabal
@@ -37,6 +37,7 @@ library
                     , Day09
                     , Day10
                     , Day11
+                    , Day12
     -- other-modules:
     -- other-extensions:
     build-depends:    base,
@@ -44,7 +45,14 @@ library
                       bytestring,
                       base16-bytestring,
                       cryptohash-md5,
-                      containers
+                      containers,
+                      aeson,
+                      lens,
+                      lens-aeson,
+                      text,
+                      scientific,
+                      vector
+
     hs-source-dirs:   src
     default-language: GHC2021
 
