--- a/Aoc2015.cabal
+++ b/Aoc2015.cabal
@@ -39,6 +39,7 @@ library
                     , Day11
                     , Day12
                     , Day13
+                    , Day14
     -- other-modules:
     -- other-extensions:
     build-depends:    base,
