--- a/Aoc2015.cabal
+++ b/Aoc2015.cabal
@@ -40,6 +40,7 @@ library
                     , Day12
                     , Day13
                     , Day14
+                    , Day15
     -- other-modules:
     -- other-extensions:
     build-depends:    base,
