--- a/Aoc2015.cabal
+++ b/Aoc2015.cabal
@@ -41,6 +41,7 @@ library
                     , Day13
                     , Day14
                     , Day15
+                    , Day16
     -- other-modules:
     -- other-extensions:
     build-depends:    base,
