--- a/Aoc2015.cabal
+++ b/Aoc2015.cabal
@@ -43,6 +43,7 @@ library
                     , Day15
                     , Day16
                     , Day17
+                    , Day18
     -- other-modules:
     -- other-extensions:
     build-depends:    base,
