--- a/Aoc2015.cabal
+++ b/Aoc2015.cabal
@@ -44,6 +44,7 @@ library
                     , Day16
                     , Day17
                     , Day18
+                    , Day19
     -- other-modules:
     -- other-extensions:
     build-depends:    base,
