--- a/Aoc2015.cabal
+++ b/Aoc2015.cabal
@@ -46,6 +46,7 @@ library
                     , Day18
                     , Day19
                     , Day20
+                    , Day21
     -- other-modules:
     -- other-extensions:
     build-depends:    base,
