--- a/Aoc2015.cabal
+++ b/Aoc2015.cabal
@@ -47,6 +47,7 @@ library
                     , Day19
                     , Day20
                     , Day21
+                    , Day22
     -- other-modules:
     -- other-extensions:
     build-depends:    base,
