--- a/Aoc2015.cabal
+++ b/Aoc2015.cabal
@@ -48,6 +48,7 @@ library
                     , Day20
                     , Day21
                     , Day22
+                    , Day23
     -- other-modules:
     -- other-extensions:
     build-depends:    base,
