--- a/Aoc2015.cabal
+++ b/Aoc2015.cabal
@@ -49,6 +49,7 @@ library
                     , Day21
                     , Day22
                     , Day23
+                    , Day24
     -- other-modules:
     -- other-extensions:
     build-depends:    base,
