feat: complete day 25!

--- a/Aoc2015.cabal
+++ b/Aoc2015.cabal
@@ -50,6 +50,7 @@ library
                     , Day22
                     , Day23
                     , Day24
+                    , Day25
     -- other-modules:
     -- other-extensions:
     build-depends:    base,
